--- a/14-5/14-5.html
+++ b/14-5/14-5.html
@@ -7,16 +7,12 @@
     <title>14-5</title>
 </head>
 <body>
-    <section style="text-align: center;">
-        
-        <form id="myForm">
-            <input type="text" name="field1" class="input1" style="width: 250px; text-align: center;" placeholder="номер страницы">
-            <input type="text" name="field2" class="input2" style="width: 250px; text-align: center;" placeholder="лимит">
-
-            <div><button class="btn" style="margin-top: 5px;">запрос</button></div>
-            <!-- ... -->
-        </form>  
+    <section style="text-align: center;">     
+        <input type="text" name="field1" class="input1" style="width: 250px; text-align: center;" placeholder="номер страницы">
+        <input type="text" name="field2" class="input2" style="width: 250px; text-align: center;" placeholder="лимит">
+        <div><button class="btn" style="margin-top: 5px;">запрос</button></div>
         <div class="res"></div>
+        <img src="" alt=""><!--   <img src="" /> -->
         <script src="14-5.js"></script>
     </section>
 </body>
